syntax = "proto3";

// Define a message parameter for representing generic values
message ConfigParameter {
        string key = 1;
        oneof value {
            bool bool_value = 2;
            int32 int_value = 3;
            float float_value = 4;
            string string_value = 5;
        }
    }

// Define a message type for module configuration
message ModuleConfig {
    repeated ConfigParameter parameters = 1;
}