syntax = "proto3";

// Module execution information
message ModuleDefinition {
    int32 order = 1;
    string name = 2;
    int32 param_id = 3;
}

// Define a message type for pipeline configuration
message PipelineDefinition {
    string name = 1;
    repeated ModuleDefinition modules = 2;
}